[gd_scene load_steps=15 format=3 uid="uid://dmktkgaw0ufi7"]

[ext_resource type="PackedScene" path="res://Characters/Health.tscn" id="1"]
[ext_resource type="Theme" uid="uid://bssttqva474rg" path="res://UI/themes/hint_object_theme.tres" id="2"]
[ext_resource type="Script" path="res://UI/textured_ui_bar.gd" id="3"]
[ext_resource type="Script" path="res://gameobjects/metastabilizer.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://bxf0efd2q4qmn" path="res://UI/elements/bar_border.png" id="5"]
[ext_resource type="PackedScene" path="res://models/metastabilizer/mdl-metastabilizer.tscn" id="6"]
[ext_resource type="PackedScene" path="res://item/item_deposit/ItemDeposit.tscn" id="7"]
[ext_resource type="Resource" uid="uid://d2h0ajf8msb5c" path="res://item/items/bio_fuel.tres" id="8"]
[ext_resource type="Texture2D" uid="uid://we0sue4i3r05" path="res://UI/elements/bar_fill.png" id="9"]

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(1.5, 2, 1.5)

[sub_resource type="Animation" id="7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Info/VBoxContainer/ProgressBar/Label:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Info/VBoxContainer/Label:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Info/VBoxContainer/ProgressBar:tint_under")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.227451, 0.227451, 0.227451, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Info/VBoxContainer/ProgressBar:tint_progress")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0.733333, 0.666667, 0)]
}

[sub_resource type="Animation" id="8"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Info/VBoxContainer/ProgressBar/Label:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Info/VBoxContainer/Label:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Info/VBoxContainer/ProgressBar:tint_under")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.227451, 0.227451, 0.227451, 0), Color(0.227451, 0.227451, 0.227451, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Info/VBoxContainer/ProgressBar:tint_progress")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0.733333, 0.666667, 0), Color(0, 0.733333, 0.666667, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x2ora"]
_data = {
"RESET": SubResource("7"),
"fade_in": SubResource("8")
}

[sub_resource type="BoxShape3D" id="9"]

[node name="metastabilizer" type="StaticBody3D" node_paths=PackedStringArray("anim_player")]
collision_layer = 2
collision_mask = 8
script = ExtResource("4")
repair_item_data = ExtResource("8")
anim_player = NodePath("AnimationPlayer")

[node name="mdl-metastabilizer" parent="." instance=ExtResource("6")]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0)

[node name="Health" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1)
allowed_max_health = 50

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Info" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Info"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -16.0
offset_right = 75.0
offset_bottom = 16.0
mouse_filter = 2

[node name="Label" type="Label" parent="CanvasLayer/Info/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
theme_override_colors/font_color = Color(1, 1, 1, 0)
text = "STATUS"

[node name="ProgressBar" type="TextureProgressBar" parent="CanvasLayer/Info/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
step = 0.1
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource("5")
texture_progress = ExtResource("9")
tint_under = Color(0.227451, 0.227451, 0.227451, 0)
tint_progress = Color(0, 0.733333, 0.666667, 0)
script = ExtResource("3")

[node name="Label" type="Label" parent="CanvasLayer/Info/VBoxContainer/ProgressBar"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_color = Color(1, 1, 1, 0)
text = "Integrity"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x2ora")
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.917171, 0.398493, 0, -0.398493, 0.917171, 0, 1.11646, 3)
light_color = Color(0, 0.905882, 1, 1)
light_energy = 5.0
spot_range = 4.292
spot_angle = 41.69

[node name="ItemDeposit" parent="." instance=ExtResource("7")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ItemDeposit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("9")

[node name="ItemAddedSound" type="AudioStreamPlayer3D" parent="."]
bus = &"SoundFX"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="ItemDeposit" to="." method="_on_ItemDeposit_body_entered"]
